Secret name change

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -73,14 +73,12 @@
   set_fact:
     application: "{{ database_type + '-database' }}"
 
-- name: Build Secret Name From EC2 Tags
+- name: Build DBA Secret Name From EC2 Tags
   shell: |
     export PATH=$PATH:/usr/local/bin
     INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
-    ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
-    DELIUS_ENVIRONMENT=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment"  --query "Tags[].Value" --output text)
     APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text)
-    echo ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-dba-passwords
+    [ "${APPLICATION}" == "delius" ] && echo {{ environment_name }}-oracle-db-dba-passwords || echo {{ environment_name }}-oracle-{{ database_type }}-db-dba-passwords
   register: build_secret_name
   run_once: yes
 
