--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -372,7 +372,7 @@
       run_once: true
 
 # If we have run a flashback then it is possible that password changes have been reverted and will be
-# out of Sync with those in SSM Parameter store and OEM.  Rotate the passwords again to sync everything up.
+# out of Sync with those in Secrets Manager and OEM.  Rotate the passwords again to sync everything up.
 # (This step is skipped if not in AWS since there will be no password store)
 - name: Rotate Database Passwords
   import_playbook: ../oracle_password_rotation/database_password_rotation.yml
