--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -8,16 +8,12 @@ on:
         required: true
         type: choice
         options:
-          - "delius-core-dev"
-          - "delius-core-test"
-          - "delius-core-training"
-          - "delius-core-stage"
-          - "delius-core-preprod"
-          - "delius-core-prod"
-          - "delius-mis-dev"
-          - "delius-mis-stage"
-          - "delius-mis-preprod"
-          - "delius-mis-prod"
+          - "dev"
+          - "test"
+          - "traing"
+          - "stage"
+          - "preprod"
+          - "prod"
       IncludeDelius:
         description: "Include Delius databases?"
         type: choice
@@ -82,13 +78,11 @@ permissions:
   id-token: write
 
 jobs:          
-  deployment:
-    name: oracle-restore-points
-    environment: ${{ github.event.inputs.TargetEnvironment}}
+  validate-parameters:
+    environment: delius-core-dev-preapproved # Choose any environment as its only used for validating parameters
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
-    timeout-minutes: 1440
+    outputs:
+      MisTargets: ${{ steps.mis_exists.outputs.mis_targets }}
     continue-on-error: false
     steps:
 
@@ -139,6 +133,50 @@ jobs:
           }
           isDateInvalid '${{ github.event.inputs.RestoreDateTime }}'
 
+      - name: Check Parameters
+        if: ${{ github.event.inputs.RestorePointName != '' &&  github.event.inputs.RestoreDateTime != '' &&  github.event.inputs.RequiredAction != 'Create Restore Point' }}
+        run: |
+          echo "Only Create Restore Point action allowed with both RestoreDateTime and RestorePointName"
+          exit 1
+
+      - name: Checkout modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Check MIS Exists In Environment
+        id: mis_exists
+        working-directory: ${{ env.inventory }}
+        run: |
+          environment_name=environment_name_delius_mis_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/')
+          # Only required to check if mis_primarydb.yml Ansible inventory group vars file exists
+          # to check MIS is in this environment
+          if [[ -e group_vars/${environment_name}_mis_primarydb.yml ]]
+          then
+            [ "${{ github.event.inputs.IncludeMIS }}" == "yes" ] && mis_targets=${environment_name}_mis_dbs,
+            [ "${{ github.event.inputs.IncludeBOE }}" == "yes" ] && mis_targets=${mis_targets}${environment_name}_boe_dbs,
+            [ "${{ github.event.inputs.IncludeDSD }}" == "yes" ] && mis_targets=${mis_targets}${environment_name}_dsd_dbs
+          fi
+          echo "mis_targets=${mis_targets}" >> $GITHUB_OUTPUT
+
+  oracle-restore-points-delius:
+    needs: validate-parameters
+    if: ${{ github.event.inputs.IncludeDelius == 'yes' }}
+    environment: delius-core-${{ github.event.inputs.TargetEnvironment }}-preapproved
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    timeout-minutes: 1440
+    continue-on-error: false
+    steps:
+
       - name: Checkout hmpps-delius-operation-automation
         uses: actions/checkout@v4
         with:
@@ -177,32 +215,11 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
-      - name: Define Targets
+      - name: Define Delius Targets
         id: definetargets
-        working-directory: ${{ env.inventory }}
         run: |
-          targets=""
-          prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
-          build_targets() {
-            databasetype=${1}
-            if [[ -e group_vars/${prefix}_${databasetype}_primarydb.yml ]]
-            then
-              targets="${targets}${prefix}_${databasetype}_dbs,"
-            fi
-            echo
-          }
-          [ "${{ github.event.inputs.IncludeDelius }}" == "yes" ] && build_targets delius
-          [ "${{ github.event.inputs.IncludeMIS }}" == "yes" ] && build_targets mis
-          [ "${{ github.event.inputs.IncludeBOE }}" == "yes" ] && build_targets boe
-          [ "${{ github.event.inputs.IncludeDSD }}" == "yes" ] && build_targets dsd
-          echo "targets=$targets"
-          echo "targets=$targets" >> $GITHUB_OUTPUT
-
-      - name: Check Parameters
-        if: ${{ github.event.inputs.RestorePointName != '' &&  github.event.inputs.RestoreDateTime != '' &&  github.event.inputs.RequiredAction != 'Create Restore Point' }}
-        run: |
-          echo "Only Create Restore Point action allowed with both RestoreDateTime and RestorePointName"
-          exit 1
+          delius_target=environment_name_delius_core_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/')_delius_dbs
+          echo "delius_target=${delius_target}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -219,8 +236,76 @@ jobs:
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_restore_points/roles
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          -e target_dbs=${{ steps.definetargets.outputs.targets }} \
+          -e target_dbs=${{ steps.definetargets.outputs.delius_target }} \
           -e "required_action='${{ github.event.inputs.RequiredAction }}'" \
           -e restore_point_name=${{ github.event.inputs.RestorePointName }} \
           -e restore_date_time=${{ github.event.inputs.RestoreDateTime }}
           
+  oracle-restore-points-mis:
+    needs: validate-parameters
+    if: ${{ needs.validate-parameters.outputs.MisTargets != '' }}
+    environment: delius-mis-${{ github.event.inputs.TargetEnvironment }}-preapproved
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    timeout-minutes: 1440
+    continue-on-error: false
+    steps:
+
+      - name: Checkout modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+  
+      - name: Checkout hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_restore_points
+            playbooks/block_sessions
+            playbooks/oracle_password_rotation
+            playbooks/oem_blackout
+            playbooks/ansible.cfg
+          path: operations
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/roles/secretsmanager-passwords
+            ansible/roles/get-modernisation-platform-facts
+          path: roles
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      - name: Start Ansible Restore Points
+        shell: bash
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_restore_points/roles
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          -e target_dbs=${{ needs.validate-parameters.outputs.MisTargets  }} \
+          -e "required_action='${{ github.event.inputs.RequiredAction }}'" \
+          -e restore_point_name=${{ github.event.inputs.RestorePointName }} \
+          -e restore_date_time=${{ github.event.inputs.RestoreDateTime }}
