--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -118,13 +118,13 @@ jobs:
         working-directory: ${{ env.inventory }}
         run: |
           targets=""
-          if [[ ! "${env}" =~ oem ]]
+          if [[ ! "${{ github.event.inputs.TargetEnvironment }}" =~ oem ]]
           then
             prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
           else
             prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/-/_/g' }}"
           fi
-          build_targets() {
+          build_target() {
             databasetype=${1}
             if [[ -e group_vars/${prefix}_${databasetype}_primarydb.yml ]]
             then
@@ -135,38 +135,35 @@ jobs:
             fi
             echo
           }
-          build_targets delius
-          build_targets mis
-          build_targets boe
-          build_targets dsd
-          build_targets oem
-          echo "targets=$targets"
-          echo "targets=$targets" >> $GITHUB_OUTPUT
+          
+          ApplicationType=$(echo ${{ github.event.inputs.TargetEnvironment }} | cut -d- -f1-2)
+          Environment=$(echo ${{ github.event.inputs.TargetEnvironment }} | cut -d- -f3)
 
-          case ${{ github.event.inputs.TargetEnvironment }} in
-            delius-core-dev)
-              TargetOemEnvironment=hmpps-oem-development
-              TargetEnvironmentName=delius-core-development
-              ;;
-            delius-core-test|delius-core-training)
-              TargetOemEnvironment=hmpps-oem-test
-              TargetEnvironmentName=delius-core-test
-              ;;
-            delius-core-stage|delius-core-preprod)
-              TargetOemEnvironment=hmpps-oem-preproduction
-              TargetEnvironmentName=delius-core-preproduction
-              ;;
-            delius-core-prod)
-              TargetOemEnvironment=hmpps-oem-production
-              TargetEnvironmentName=delius-core-production
-              ;;
-            *oem*)
-              TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
-              TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}
-              ;;
-          esac
+          if [[ "${ApplicationType}" == "delius-core" ]]
+          then
+            build_target delius
+          elif [[ "${ApplicationType}" == "delius-mis" ]]
+            build_target mis
+            build_target boe
+            build_target dsd
+          else
+            build_target oem
+          fi
+
+          if [[ "$ApplicationType} != "hmpps-oem" ]]
+          then
+            [[ "${Environment}" == "dev" ]] && OemEnvironment=development
+            [[ "${Environment}" == "test" || "${Environment}" = "training" ]] && OemEnvironment=test
+            [[ "${Environment}" == "stage" || "${Environment}" = "preprod" ]] && OemEnvironment=preproduction
+            [[ "${Environment}" == "prod" ]] && OemEnvironment=production
+            TargetOemEnvironment=hmpps-oem-${OemEnvironment}
+          else
+            TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
+          fi
+
+          echo "targets=$targets" >> $GITHUB_OUTPUT
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
-          echo "TargetEnvironmentName=${TargetEnvironmentName}" >> $GITHUB_OUTPUT
+          echo "TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -188,7 +185,7 @@ jobs:
   oracle_update_oem_targets:
     name: oracle-update-oem-targets
     needs: oracle_password_rotation
-    environment: ${{ needs.oracle_password_rotation.outputs.TargetOEMEnvironment }}
+    environment: ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
