--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
@@ -1,19 +1,17 @@
 - name: Sync SYS Password Parameter in the {{ target_environment_name }}
   block:
     - name: Work Out Host Match And Environment
+      when: not target_environment_name is search('hmpps-oem')
       block:
-        - name: Set Environment
-          set_fact:
-            secret_environment: "{{ target_environment_name }}"
 
         - name: Set Host Match
           set_fact:
-            host_match: "{{ dns_zone_internal.split('.')[1:] | join('.') }}"
-
-      when: not target_environment_name is search('hmpps-oem')
+            host_match: "{{ target_environment_name }}"
 
     - name: Work Out Host Match and Environment (OEM)
+      when: target_environment_name is search('hmpps-oem')
       block:
+
         - name: Set Environment (OEM)
           set_fact:
             secret_environment: "{{ oemdb_secretsmanager_passwords['oemdb']['secret'] }}"
@@ -22,14 +20,13 @@
           set_fact:
             host_match: "{{ inventory_hostname }}"
 
-      when: target_environment_name is search('hmpps-oem')
 
     - name: Get All Physical Standby Databases in this Environment (Delius)
       shell: |
         . ~/.bash_profile
         {{ emcli }} sync 1>/dev/null 2>&1 || ( {{ emcli }} login -username=sysman -password=${SYSMAN_PASSWORD} -force && {{ emcli }} sync ) 1>/dev/null 2>&1
-        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='oracle_database'" -search="TYPE_QUALIFIER4='Physical Standby'" -script -columns="TARGET_NAME,HOST_NAME" -noheader | grep delius | sed 's/^\([a-zA-Z0-9_\.-]*\)[[:space:]]*\([a-zA-Z0-9_\.]*\)-\([a-zA-Z0-9_\.]*\)-.*$/\1 \2 \3/'
-        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='oracle_database'" -search="TYPE_QUALIFIER4='Snapshot Standby'" -script -columns="TARGET_NAME,HOST_NAME" -noheader | grep delius | sed 's/^\([a-zA-Z0-9_\.-]*\)[[:space:]]*\([a-zA-Z0-9_\.]*\)-\([a-zA-Z0-9_\.]*\)-.*$/\1 \2 \3/'
+        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='oracle_database'" -search="TYPE_QUALIFIER4='Physical Standby'" -script -columns="TARGET_NAME,HOST_NAME" -noheader | sed 's/^\([a-zA-Z0-9_\.-]*\)[[:space:]]*\([a-zA-Z0-9_\.]*\)-\([a-zA-Z0-9_\.]*\)-.*$/\1 \2 \3/'
+        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='oracle_database'" -search="TYPE_QUALIFIER4='Snapshot Standby'" -script -columns="TARGET_NAME,HOST_NAME" -noheader | sed 's/^\([a-zA-Z0-9_\.-]*\)[[:space:]]*\([a-zA-Z0-9_\.]*\)-\([a-zA-Z0-9_\.]*\)-.*$/\1 \2 \3/'
       register: physical_standby
       environment:
         SYSMAN_PASSWORD: "{{ sysman_password }}"
@@ -38,7 +35,6 @@
     - block:
         - name: Create Lists For Standby Databases
           set_fact:
-            environment_list: "{{ (environment_list | default([]) + [ env.split()[1] + ' ' + env.split()[2] | string ]) | unique }}"
             monitor_list: "{{ monitor_list | default([]) + [ env ] }}"
           loop: "{{ physical_standby.stdout_lines }}"
           loop_control:
@@ -48,11 +44,11 @@
           include_tasks: set_monitoring_password.yml
           vars:
             account_name: "{{ target_environment_name }}"
-            secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-' + target_env.split()[0] + '-' + target_env.split()[1] + '-dba-passwords' }}"
+            secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
             db_username: sys
             monitor_type: oracle_database
             monitor_role: SYSDBA
-          loop: "{{ environment_list }}"
+          loop: "{{ monitor_list }}"
           loop_control:
             loop_var: target_env
 
@@ -65,8 +61,8 @@
       shell: |
         . ~/.bash_profile
         {{ emcli }} sync 1>/dev/null 2>&1 || ( {{ emcli }} login -username=sysman -password=${SYSMAN_PASSWORD} -force && {{ emcli }} sync ) 1>/dev/null 2>&1
-        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='oracle_database'" -search="TYPE_QUALIFIER4='Primary'" -script -columns="TARGET_NAME,HOST_NAME" -noheader | grep delius | sed 's/^\([a-zA-Z0-9_\.-]*\)[[:space:]]*\([a-zA-Z0-9_\.]*\)-\([a-zA-Z0-9_\.]*\)-.*$/\1 \2 \3/'
-        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='oracle_database'" -search="TYPE_QUALIFIER4='None'" -script -columns="TARGET_NAME,HOST_NAME" -noheader | grep delius | sed 's/^\([a-zA-Z0-9_\.-]*\)[[:space:]]*\([a-zA-Z0-9_\.]*\)-\([a-zA-Z0-9_\.]*\)-.*$/\1 \2 \3/'
+        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='oracle_database'" -search="TYPE_QUALIFIER4='Primary'" -script -columns="TARGET_NAME,HOST_NAME" -noheader | sed 's/^\([a-zA-Z0-9_\.-]*\)[[:space:]]*\([a-zA-Z0-9_\.]*\)-\([a-zA-Z0-9_\.]*\)-.*$/\1 \2 \3/'
+        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='oracle_database'" -search="TYPE_QUALIFIER4='None'" -script -columns="TARGET_NAME,HOST_NAME" -noheader | sed 's/^\([a-zA-Z0-9_\.-]*\)[[:space:]]*\([a-zA-Z0-9_\.]*\)-\([a-zA-Z0-9_\.]*\)-.*$/\1 \2 \3/'
       register: primary
       environment:
         SYSMAN_PASSWORD: "{{ sysman_password }}"
@@ -74,7 +70,6 @@
 
     - name: Create Lists For Primary Databases
       set_fact:
-        environment_list: "{{ (environment_list | default([]) + [ env.split()[1] + ' ' + env.split()[2] | string ]) | unique }}"
         monitor_list: "{{ monitor_list | default([]) + [ env ] }}"
       loop: "{{ primary.stdout_lines }}"
       loop_control:
@@ -84,11 +79,11 @@
       include_tasks: set_monitoring_password.yml
       vars:
         account_name: "{{ target_environment_name }}"
-        secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-' + target_env.split()[0] + '-' + target_env.split()[1] + '-dba-passwords' }}"
+        secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
         db_username: dbsnmp
         monitor_type: oracle_database
         monitor_role: Normal
-      loop: "{{ environment_list }}"
+      loop: "{{ monitor_list }}"
       loop_control:
         loop_var: target_env
 
@@ -97,7 +92,7 @@
       shell: |
         . ~/.bash_profile
         {{ emcli }} sync 1>/dev/null 2>&1 || ( {{ emcli }} login -username=sysman -password=${SYSMAN_PASSWORD} -force && {{ emcli }} sync ) 1>/dev/null 2>&1
-        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='osm_instance'" -script -columns="TARGET_NAME" -noheader | grep delius | awk -F[_-] '{printf("%s %s %s\n",$0,$2,$3)}'
+        {{ emcli }} get_targets -script -targets="%{{ host_match }}%:host;" -noheader | awk '{print $NF}' | xargs -i {{ emcli }} list -resource="Targets" -search="HOST_NAME='{}'" -search="TARGET_TYPE='osm_instance'" -script -columns="TARGET_NAME" -noheader | awk -F[_-] '{printf("%s %s %s\n",$0,$2,$3)}'
       register: osm_instance
       environment:
         SYSMAN_PASSWORD: "{{ sysman_password }}"
@@ -105,7 +100,6 @@
 
     - name: Create Lists For ASM
       set_fact:
-        environment_list: "{{ (environment_list | default([]) + [ env.split()[1] + ' ' + env.split()[2] | string ]) | unique }}"
         monitor_list: "{{ monitor_list | default([]) + [ env ] }}"
       loop: "{{ osm_instance.stdout_lines }}"
       loop_control:
@@ -115,10 +109,10 @@
       include_tasks: set_monitoring_password.yml
       vars:
         account_name: "{{ target_environment_name }}"
-        secret_name: "{{ '/ec2/' + ec2_name + '/asm-passwords' if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-' + target_env.split()[0] + '-' + target_env.split()[1] + '-dba-passwords' }}"
+        secret_name: "{{ '/ec2/' + ec2_name + '/asm-passwords' if target_environment_name is search('hmpps-oem') else target_environment_name + '-oracle-' + (target_env.split()[0] | regex_replace('^.*-(\\w{3})-db-\\d{1}.*$','\\1-') + 'db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
         db_username: "{{ 'ASMSNMP'  if (target_environment_name is search('hmpps-oem')) else 'asmsnmp' }}"
         monitor_type: osm_instance
         monitor_role: SYSASM
-      loop: "{{ environment_list }}"
+      loop: "{{ monitor_list }}"
       loop_control:
         loop_var: target_env
