Missing then reserved word

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -143,6 +143,7 @@ jobs:
           then
             build_target delius
           elif [[ "${ApplicationType}" == "delius-mis" ]]
+          then
             build_target mis
             build_target boe
             build_target dsd
