--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -122,7 +122,7 @@ jobs:
           then
             prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
           else
-            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/-/_/g' }}"
+            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/-/_/g')"
           fi
           build_target() {
             databasetype=${1}
@@ -151,7 +151,7 @@ jobs:
             build_target oem
           fi
 
-          if [[ "$ApplicationType} != "hmpps-oem" ]]
+          if [[ "${ApplicationType}" != "hmpps-oem" ]]
           then
             [[ "${Environment}" == "dev" ]] && OemEnvironment=development
             [[ "${Environment}" == "test" || "${Environment}" = "training" ]] && OemEnvironment=test
