--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -242,7 +242,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $oem_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          $oem_command -i $inventory \
           -e oem_target=environment_name_$(echo ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }} | sed 's/-/_/g') \
           -e environment_name=${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}  \
           -e target_environment_name=${{ needs.oracle_password_rotation.outputs.TargetEnvironmentName }} \
