Retrieve secrets one time only when required

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
@@ -1,5 +1,14 @@
+
 - name: Sync SYS Password Parameter in the {{ target_environment_name }}
   block:
+
+    - name: Get EC2 Metadata Facts
+      amazon.aws.ec2_metadata_facts:
+
+    - name: Set Target Account Name For Secrets
+      set_fact:
+        target_account_name: "{{ target_environment_name.split('-')[:2] | join('-') + '-' + aws_environment }}"
+
     - name: Work Out Host Match And Environment
       when: not target_environment_name is search('hmpps-oem')
       block:
@@ -20,7 +29,6 @@
           set_fact:
             host_match: "{{ inventory_hostname }}"
 
-
     - name: Get All Physical Standby Databases in this Environment (Delius)
       shell: |
         . ~/.bash_profile
@@ -33,8 +41,10 @@
       changed_when: false
 
     - block:
+
         - name: Create Lists For Standby Databases
           set_fact:
+            unique_list: "{{ (unique_list | default([]) + [ env.split()[0][:6] + ' ' + env.split()[1] + ' ' + env.split()[2] | string]) | unique }}"
             monitor_list: "{{ monitor_list | default([]) + [ env ] }}"
           loop: "{{ physical_standby.stdout_lines }}"
           loop_control:
@@ -43,14 +53,19 @@
         - name: Set the Monitoring Credentials for Physical Standby Databases
           include_tasks: set_monitoring_password.yml
           vars:
-            account_name: "{{ target_environment_name }}"
+            account_name: "{{ target_account_name }}"
             secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
             db_username: sys
             monitor_type: oracle_database
             monitor_role: SYSDBA
-          loop: "{{ monitor_list }}"
+          loop: "{{ unique_list }}"
           loop_control:
             loop_var: target_env
+
+        - name: Reset Unique And Monitor List
+          set_fact:
+            monitor_list: []
+            unique_list: []
 
       when: physical_standby.stdout_lines | length > 0
 
@@ -78,7 +93,7 @@
     - name: Set the Monitoring Credentials for Primary Databases
       include_tasks: set_monitoring_password.yml
       vars:
-        account_name: "{{ target_environment_name }}"
+        account_name: "{{ target_account_name }}"
         secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
         db_username: dbsnmp
         monitor_type: oracle_database
@@ -86,6 +101,11 @@
       loop: "{{ monitor_list }}"
       loop_control:
         loop_var: target_env
+
+    - name: Reset Unique And Monitor List
+      set_fact:
+        monitor_list: []
+        unique_list: []
 
     # ASMSNMP is Used for ASM Instance Monitoring
     - name: Get All ASM Instances in this Environment
@@ -100,6 +120,7 @@
 
     - name: Create Lists For ASM
       set_fact:
+        unique_list: "{{ (unique_list | default([]) + [ env.split()[0] | regex_replace('^(\\+)(.*-db-)\\d{1}.*$','\\2') + ' ' + env.split()[1] + ' ' + env.split()[2] | string]) | unique }}"
         monitor_list: "{{ monitor_list | default([]) + [ env ] }}"
       loop: "{{ osm_instance.stdout_lines }}"
       loop_control:
@@ -108,11 +129,11 @@
     - name: Set the Monitoring Credentials for ASM Instances
       include_tasks: set_monitoring_password.yml
       vars:
-        account_name: "{{ target_environment_name }}"
-        secret_name: "{{ '/ec2/' + ec2_name + '/asm-passwords' if target_environment_name is search('hmpps-oem') else target_environment_name + '-oracle-' + (target_env.split()[0] | regex_replace('^.*-(\\w{3})-db-\\d{1}.*$','\\1-') + 'db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
+        account_name: "{{ target_account_name }}"
+        secret_name: "{{ '/ec2/' + ec2_name + '/asm-passwords' if target_environment_name is search('hmpps-oem') else target_environment_name + '-oracle-' + (target_env.split()[0] | regex_replace('^.*-(\\w{3})-db-$','\\1-') + 'db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
         db_username: "{{ 'ASMSNMP'  if (target_environment_name is search('hmpps-oem')) else 'asmsnmp' }}"
         monitor_type: osm_instance
         monitor_role: SYSASM
-      loop: "{{ monitor_list }}"
+      loop: "{{ unique_list }}"
       loop_control:
         loop_var: target_env
