--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -35,8 +35,4 @@
   loop: "{{ monitor_list }}"
   loop_control:
     loop_var: monitor_item
-  when: monitor_item.split()[1] == target_env.split()[0] and monitor_item.split()[2] == target_env.split()[1]
-
-- name: Reset Monitor List
-  set_fact:
-    monitor_list: []
+  when: monitor_item.split()[0] is search(target_env.split()[0])
