Append -preapproved to environment

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -63,7 +63,7 @@ permissions:
 jobs:          
   oracle_password_rotation:
     name: oracle-password-rotation
-    environment: ${{ github.event.inputs.TargetEnvironment }}
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -186,7 +186,7 @@ jobs:
   oracle_update_oem_targets:
     name: oracle-update-oem-targets
     needs: oracle_password_rotation
-    environment: ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}
+    environment: ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -254,7 +254,7 @@ jobs:
   oracle_unlock_system_users:
     name: oracle-unlock-system-users
     needs: [oracle_password_rotation, oracle_update_oem_targets]
-    environment: ${{ github.event.inputs.TargetEnvironment }}
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
