Build secret name when primary

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -80,7 +80,7 @@
     APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text)
     [ "${APPLICATION}" == "delius" ] && echo {{ environment_name }}-oracle-db-dba-passwords || echo {{ environment_name }}-oracle-{{ database_type }}-db-dba-passwords
   register: build_secret_name
-  run_once: yes
+  when: database_primary_sid is defined
 
 - name: Set Secret Manager Name
   set_fact:
