--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -1,8 +1,8 @@
 name: "Oracle: Schedule Password Rotation"
 on:
   schedule:
-    - cron: '00 12 ? * TUE *'
-    - cron: '00 14 ? * TUE *'
+    - cron: '00 12 * * TUE'
+    - cron: '00 14 * * TUE'
 
 jobs:
   prepare-run-matrix:
