--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -63,7 +63,7 @@ permissions:
 jobs:          
   oracle_password_rotation:
     name: oracle-password-rotation
-    environment: ${{ github.event.inputs.TargetEnvironment }}
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -118,13 +118,13 @@ jobs:
         working-directory: ${{ env.inventory }}
         run: |
           targets=""
-          if [[ ! "${env}" =~ oem ]]
+          if [[ ! "${{ github.event.inputs.TargetEnvironment }}" =~ oem ]]
           then
             prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
           else
-            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/-/_/g' }}"
+            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/-/_/g')"
           fi
-          build_targets() {
+          build_target() {
             databasetype=${1}
             if [[ -e group_vars/${prefix}_${databasetype}_primarydb.yml ]]
             then
@@ -135,38 +135,36 @@ jobs:
             fi
             echo
           }
-          build_targets delius
-          build_targets mis
-          build_targets boe
-          build_targets dsd
-          build_targets oem
-          echo "targets=$targets"
-          echo "targets=$targets" >> $GITHUB_OUTPUT
+          
+          ApplicationType=$(echo ${{ github.event.inputs.TargetEnvironment }} | cut -d- -f1-2)
+          Environment=$(echo ${{ github.event.inputs.TargetEnvironment }} | cut -d- -f3)
 
-          case ${{ github.event.inputs.TargetEnvironment }} in
-            delius-core-dev)
-              TargetOemEnvironment=hmpps-oem-development
-              TargetEnvironmentName=delius-core-development
-              ;;
-            delius-core-test|delius-core-training)
-              TargetOemEnvironment=hmpps-oem-test
-              TargetEnvironmentName=delius-core-test
-              ;;
-            delius-core-stage|delius-core-preprod)
-              TargetOemEnvironment=hmpps-oem-preproduction
-              TargetEnvironmentName=delius-core-preproduction
-              ;;
-            delius-core-prod)
-              TargetOemEnvironment=hmpps-oem-production
-              TargetEnvironmentName=delius-core-production
-              ;;
-            *oem*)
-              TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
-              TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}
-              ;;
-          esac
+          if [[ "${ApplicationType}" == "delius-core" ]]
+          then
+            build_target delius
+          elif [[ "${ApplicationType}" == "delius-mis" ]]
+          then
+            build_target mis
+            build_target boe
+            build_target dsd
+          else
+            build_target oem
+          fi
+
+          if [[ "${ApplicationType}" != "hmpps-oem" ]]
+          then
+            [[ "${Environment}" == "dev" ]] && OemEnvironment=development
+            [[ "${Environment}" == "test" || "${Environment}" = "training" ]] && OemEnvironment=test
+            [[ "${Environment}" == "stage" || "${Environment}" = "preprod" ]] && OemEnvironment=preproduction
+            [[ "${Environment}" == "prod" ]] && OemEnvironment=production
+            TargetOemEnvironment=hmpps-oem-${OemEnvironment}
+          else
+            TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
+          fi
+
+          echo "targets=$targets" >> $GITHUB_OUTPUT
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
-          echo "TargetEnvironmentName=${TargetEnvironmentName}" >> $GITHUB_OUTPUT
+          echo "TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -188,7 +186,7 @@ jobs:
   oracle_update_oem_targets:
     name: oracle-update-oem-targets
     needs: oracle_password_rotation
-    environment: ${{ needs.oracle_password_rotation.outputs.TargetOEMEnvironment }}
+    environment: ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -244,7 +242,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $oem_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          $oem_command -i $inventory \
           -e oem_target=environment_name_$(echo ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }} | sed 's/-/_/g') \
           -e environment_name=${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}  \
           -e target_environment_name=${{ needs.oracle_password_rotation.outputs.TargetEnvironmentName }} \
@@ -256,7 +254,7 @@ jobs:
   oracle_unlock_system_users:
     name: oracle-unlock-system-users
     needs: [oracle_password_rotation, oracle_update_oem_targets]
-    environment: ${{ github.event.inputs.TargetEnvironment }}
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
