Include Ansible SSM if required

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -158,9 +158,11 @@ jobs:
             [[ "${Environment}" == "stage" || "${Environment}" = "preprod" ]] && OemEnvironment=preproduction
             [[ "${Environment}" == "prod" ]] && OemEnvironment=production
             TargetOemEnvironment=hmpps-oem-${OemEnvironment}
+            IncludeSsmBucket="-e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}"
           else
             TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
           fi
+
 
           echo "targets=$targets" >> $GITHUB_OUTPUT
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
@@ -179,7 +181,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $database_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          $database_command -i $inventory $IncludeSsmBucket \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
           -e environment_name=${{ github.event.inputs.TargetEnvironment }} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
 
