No need to add account and role

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
@@ -8,10 +8,10 @@
       account:
         secret: "{{ secret_name }}"
 
-- name: Add Secret Account Name and Role Name To Secret Dictionary For OEM databases
-  set_fact:
-    secret_password_dict: "{{ secret_password_dict |  combine({ 'account': { 'account_name':  'hmpps-oem-' + aws_environment, 'assume_role_name': 'EC2OracleEnterpriseManagementSecretsRole' }}, recursive=true) }}"
-  when: oem_db_name is defined
+# - name: Add Secret Account Name and Role Name To Secret Dictionary For OEM databases
+#   set_fact:
+#     secret_password_dict: "{{ secret_password_dict |  combine({ 'account': { 'account_name':  'hmpps-oem-' + aws_environment, 'assume_role_name': 'EC2OracleEnterpriseManagementSecretsRole' }}, recursive=true) }}"
+#   when: oem_db_name is defined
 
 - name: Add User {{ db_username }} To Secret Dictionary
   set_fact:
