Correct target environments

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -20,13 +20,16 @@ on:
           - "hmpps-oem-test"
           - "hmpps-oem-preproduction"
           - "hmpps-oem-production"
-          - "delius-core-development"
+          - "delius-core-dev"
           - "delius-core-test"
-          - "delius-core-preproduction"
-          - "delius-core-production"
-          - "delius-mis-development"
-          - "delius-mis-preproduction"
-          - "delius-mis-production"
+          - "delius-core-training"
+          - "delius-core-stage"
+          - "delius-core-preprod"
+          - "delius-core-prod"
+          - "delius-mis-dev"
+          - "delius-mis-stage"
+          - "delius-mis-preprod"
+          - "delius-mis-prod"
       SyncMonitoringPasswords:
         description: "Sync EM Cloud Control Target Monitoring Passwords with Secret Manager"
         type: choice
