--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -6,17 +6,17 @@
   set_fact:
     secret_password_dict:
       account:
-        account_name: "{{ account_name }}"
-        assume_role_name: "{{ assume_role }}"
+        account_name: "{{ target_account_name }}"
+        assume_role_name: "EC2OracleEnterpriseManagementSecretsRole"
         secret: "{{ secret_name }}"
-  when: not target_account_name is search('hmpps-oem')
+  when: not target_environment_name is search('hmpps-oem')
 
 - name: Setup Temporary Secrets Dictionary For OEM
   set_fact:
     secret_password_dict:
       account:
         secret: "{{ secret_name }}"
-  when: target_account_name is search('hmpps-oem')
+  when: target_environment_name is search('hmpps-oem')
 
 - name: Combine {{ db_username }} User To Secrets Dictionary
   set_fact:
