--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -1,5 +1,5 @@
 name: "Oracle: OEM Password Rotation"
-run-name: "Oracle: ${{ github.event.inputs.TargetOemEnvironment }}-oem-password-rotation"
+run-name: "Oracle: ${{ github.event.inputs.TargetEnvironmentName }}-oem-password-rotation"
 on:
   workflow_dispatch:
     inputs:
@@ -89,7 +89,7 @@ permissions:
 jobs:          
   deployment:
     name: oracle-oem-password-rotation
-    environment: ${{ github.event.inputs.TargetOemEnvironment}}
+    environment: ${{ github.event.inputs.TargetOemEnvironment }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -151,7 +151,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          $command -i $inventory \
           -e oem_target=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} \
           -e environment_name=${{ github.event.inputs.TargetEnvironmentName }}  \
           -e target_environment_name=${{ github.event.inputs.TargetEnvironmentName }} \
