--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -82,7 +82,7 @@ permissions:
 jobs:          
   deployment:
     name: oracle-oem-password-rotation
-    environment: ${{ github.event.inputs.TargetOemEnvironment }}
+    environment: ${{ github.event.inputs.TargetOemEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
